refactor: asegurar API con JWT, validaciones y Swagger funcional